--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,19 +43,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "<>:2: SyntaxWarning: invalid escape sequence '\\s'\n",
-      "<>:2: SyntaxWarning: invalid escape sequence '\\s'\n",
-      "C:\\Users\\Stacker PC\\AppData\\Local\\Temp\\ipykernel_6764\\3868801924.py:2: SyntaxWarning: invalid escape sequence '\\s'\n",
-      "  sample = pd.read_csv(\"sample_submission.csv\\sample_submission.csv\")\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -120,7 +110,7 @@
        "4  13  Ghost"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -141,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -345,7 +335,7 @@
        "max    897.000000     0.817001       0.932466     1.000000    0.935721"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -357,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -386,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -401,14 +391,14 @@
     }
    ],
    "source": [
-    "sns.countplot(train, x = 'color', hue = \"color\")\n",
+    "sns.countplot(train, x = 'color', hue=\"color\")\n",
     "plt.title('Distribution of Colors')\n",
     "plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -431,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -440,7 +430,7 @@
        "([0, 1, 2], [Text(0, 0, 'Ghoul'), Text(1, 0, 'Goblin'), Text(2, 0, 'Ghost')])"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -463,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -489,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -545,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -570,12 +560,13 @@
     "    df['total_physical'] = df['bone_length'] + df['rotting_flesh'] + df['hair_length']\n",
     "    df['soul_physical_ratio'] = df['has_soul'] / (df['total_physical'] + 0.001)\n",
     "    \n",
+    "    # Remove id and color\n",
     "    return df\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -728,7 +719,7 @@
        "4          0.405053        1.860572             0.341882  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -736,12 +727,12 @@
    "source": [
     "# Apply feature engineering\n",
     "train_enhanced = create_features(train)\n",
-    "train_enhanced.head()\n"
+    "train_enhanced.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -799,7 +790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -810,7 +801,7 @@
     "                   'soul_physical_ratio']\n",
     "\n",
     "\n",
-    "# Prepare the training data\n",
+    "# Prepare training data\n",
     "X = train_enhanced[feature_columns]\n",
     "y = train_enhanced[\"type\"]\n"
    ]
@@ -824,17 +815,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Split the data into training and testing sets\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42, stratify=y)\n",
-    "\n",
-    "# Scale features\n",
-    "# scaler = StandardScaler()\n",
-    "# X_train_scaled = scaler.fit_transform(X_train)\n",
-    "# X_test_scaled = scaler.transform(X_test)"
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42, stratify=y)"
    ]
   },
   {
@@ -846,7 +832,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -866,9 +852,7 @@
       "Gradient Boosting:\n",
       "  CV Accuracy: 0.706 (+/- 0.061)\n",
       "  Test Accuracy: 0.760\n",
-      "\n",
-      "Best Model: Random Forest\n",
-      "Best Test Accuracy: 0.800\n"
+      "\n"
      ]
     }
    ],
@@ -908,9 +892,92 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 53,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Running GridSearchCV for Decision Tree...\n",
+      "Decision Tree:\n",
+      "  Best Params: {'max_depth': 3, 'min_samples_split': 10}\n",
+      "  CV Accuracy: 0.689\n",
+      "  Test Accuracy: 0.760\n",
+      "\n",
+      "Running GridSearchCV for Random Forest...\n",
+      "Random Forest:\n",
+      "  Best Params: {'max_depth': None, 'min_samples_split': 10, 'n_estimators': 100}\n",
+      "  CV Accuracy: 0.703\n",
+      "  Test Accuracy: 0.827\n",
+      "\n",
+      "Running GridSearchCV for Gradient Boosting...\n",
+      "Gradient Boosting:\n",
+      "  Best Params: {'learning_rate': 0.2, 'max_depth': 3, 'n_estimators': 100}\n",
+      "  CV Accuracy: 0.720\n",
+      "  Test Accuracy: 0.773\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.model_selection import GridSearchCV\n",
+    "\n",
+    "# Define parameter grids for each model\n",
+    "param_grids = {\n",
+    "    'Decision Tree': {\n",
+    "        'max_depth': [3, 5, 7, None],\n",
+    "        'min_samples_split': [2, 5, 10]\n",
+    "    },\n",
+    "    'Random Forest': {\n",
+    "        'n_estimators': [50, 100, 200],\n",
+    "        'max_depth': [3, 5, 7, None],\n",
+    "        'min_samples_split': [2, 5, 10]\n",
+    "    },\n",
+    "    'Gradient Boosting': {\n",
+    "        'n_estimators': [50, 100, 200],\n",
+    "        'learning_rate': [0.01, 0.1, 0.2],\n",
+    "        'max_depth': [3, 5, 7]\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "results = {}\n",
+    "\n",
+    "for name, model in models.items():\n",
+    "    print(f\"Running GridSearchCV for {name}...\")\n",
+    "    grid = GridSearchCV(model, param_grids[name], cv=5, scoring='accuracy', n_jobs=-1)\n",
+    "    grid.fit(X_train, y_train)\n",
+    "    best_model = grid.best_estimator_\n",
+    "    y_pred = best_model.predict(X_test)\n",
+    "    accuracy = accuracy_score(y_test, y_pred)\n",
+    "    results[name] = {\n",
+    "        'model': best_model,\n",
+    "        'best_params': grid.best_params_,\n",
+    "        'cv_mean': grid.best_score_,\n",
+    "        'test_accuracy': accuracy,\n",
+    "        'predictions': y_pred\n",
+    "    }\n",
+    "    print(f\"{name}:\")\n",
+    "    print(f\"  Best Params: {grid.best_params_}\")\n",
+    "    print(f\"  CV Accuracy: {grid.best_score_:.3f}\")\n",
+    "    print(f\"  Test Accuracy: {accuracy:.3f}\")\n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Best Model: Random Forest\n",
+      "Best Test Accuracy: 0.827\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "# Find best model\n",
@@ -941,202 +1008,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Testing the model on the Test Set"
+    "### Testing the model on Test Set"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 56,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 529 entries, 0 to 528\n",
-      "Data columns (total 6 columns):\n",
-      " #   Column         Non-Null Count  Dtype  \n",
-      "---  ------         --------------  -----  \n",
-      " 0   id             529 non-null    int64  \n",
-      " 1   bone_length    529 non-null    float64\n",
-      " 2   rotting_flesh  529 non-null    float64\n",
-      " 3   hair_length    529 non-null    float64\n",
-      " 4   has_soul       529 non-null    float64\n",
-      " 5   color          529 non-null    object \n",
-      "dtypes: float64(4), int64(1), object(1)\n",
-      "memory usage: 24.9+ KB\n"
-     ]
-    }
-   ],
-   "source": [
-    "test.info()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>id</th>\n",
-       "      <th>bone_length</th>\n",
-       "      <th>rotting_flesh</th>\n",
-       "      <th>hair_length</th>\n",
-       "      <th>has_soul</th>\n",
-       "      <th>color</th>\n",
-       "      <th>color_encoded</th>\n",
-       "      <th>bone_soul_ratio</th>\n",
-       "      <th>flesh_hair_ratio</th>\n",
-       "      <th>bone_length_squared</th>\n",
-       "      <th>has_soul_squared</th>\n",
-       "      <th>total_physical</th>\n",
-       "      <th>soul_physical_ratio</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>3</td>\n",
-       "      <td>0.471774</td>\n",
-       "      <td>0.387937</td>\n",
-       "      <td>0.706087</td>\n",
-       "      <td>0.698537</td>\n",
-       "      <td>black</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.674409</td>\n",
-       "      <td>0.548641</td>\n",
-       "      <td>0.222571</td>\n",
-       "      <td>0.487954</td>\n",
-       "      <td>1.565798</td>\n",
-       "      <td>0.445837</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>6</td>\n",
-       "      <td>0.427332</td>\n",
-       "      <td>0.645024</td>\n",
-       "      <td>0.565558</td>\n",
-       "      <td>0.451462</td>\n",
-       "      <td>white</td>\n",
-       "      <td>5</td>\n",
-       "      <td>0.944461</td>\n",
-       "      <td>1.138495</td>\n",
-       "      <td>0.182613</td>\n",
-       "      <td>0.203818</td>\n",
-       "      <td>1.637914</td>\n",
-       "      <td>0.275464</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>9</td>\n",
-       "      <td>0.549602</td>\n",
-       "      <td>0.491931</td>\n",
-       "      <td>0.660387</td>\n",
-       "      <td>0.449809</td>\n",
-       "      <td>black</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1.219145</td>\n",
-       "      <td>0.743786</td>\n",
-       "      <td>0.302062</td>\n",
-       "      <td>0.202328</td>\n",
-       "      <td>1.701920</td>\n",
-       "      <td>0.264140</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>10</td>\n",
-       "      <td>0.638095</td>\n",
-       "      <td>0.682867</td>\n",
-       "      <td>0.471409</td>\n",
-       "      <td>0.356924</td>\n",
-       "      <td>white</td>\n",
-       "      <td>5</td>\n",
-       "      <td>1.782764</td>\n",
-       "      <td>1.445501</td>\n",
-       "      <td>0.407165</td>\n",
-       "      <td>0.127395</td>\n",
-       "      <td>1.792371</td>\n",
-       "      <td>0.199024</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>13</td>\n",
-       "      <td>0.361762</td>\n",
-       "      <td>0.583997</td>\n",
-       "      <td>0.377256</td>\n",
-       "      <td>0.276364</td>\n",
-       "      <td>black</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1.304287</td>\n",
-       "      <td>1.543919</td>\n",
-       "      <td>0.130872</td>\n",
-       "      <td>0.076377</td>\n",
-       "      <td>1.323016</td>\n",
-       "      <td>0.208732</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   id  bone_length  rotting_flesh  hair_length  has_soul  color  \\\n",
-       "0   3     0.471774       0.387937     0.706087  0.698537  black   \n",
-       "1   6     0.427332       0.645024     0.565558  0.451462  white   \n",
-       "2   9     0.549602       0.491931     0.660387  0.449809  black   \n",
-       "3  10     0.638095       0.682867     0.471409  0.356924  white   \n",
-       "4  13     0.361762       0.583997     0.377256  0.276364  black   \n",
-       "\n",
-       "   color_encoded  bone_soul_ratio  flesh_hair_ratio  bone_length_squared  \\\n",
-       "0              0         0.674409          0.548641             0.222571   \n",
-       "1              5         0.944461          1.138495             0.182613   \n",
-       "2              0         1.219145          0.743786             0.302062   \n",
-       "3              5         1.782764          1.445501             0.407165   \n",
-       "4              0         1.304287          1.543919             0.130872   \n",
-       "\n",
-       "   has_soul_squared  total_physical  soul_physical_ratio  \n",
-       "0          0.487954        1.565798             0.445837  \n",
-       "1          0.203818        1.637914             0.275464  \n",
-       "2          0.202328        1.701920             0.264140  \n",
-       "3          0.127395        1.792371             0.199024  \n",
-       "4          0.076377        1.323016             0.208732  "
-      ]
-     },
-     "execution_count": 43,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Creating the features on the test dataset\n",
     "test_enhanced = create_features(test)\n",
-    "test_features = test_enhanced[feature_columns]\n",
-    "test_enhanced.head()"
+    "test_features = test_enhanced[feature_columns]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1146,7 +1034,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -1213,7 +1101,7 @@
        "4  13          Ghost"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
